--- a/cs109_python_tutorial.ipynb
+++ b/cs109_python_tutorial.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Credit Justin Johnson, Volodymyr Kuleshov and Isaac Caswell"
+    "Credit Justin Johnson, Volodymyr Kuleshov, Isaac Caswell and CS231A"
    ]
   },
   {
@@ -3103,7 +3103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we are showing a simple, but non-trivial example where we segment an image using k-means."
+    "Here we are showing a simple, but non-trivial example from assignment of CS231A at Stanford University where we segment an image using k-means."
    ]
   },
   {
