--- a/cs109_python_tutorial.ipynb
+++ b/cs109_python_tutorial.ipynb
@@ -3140,7 +3140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below are some utilities and can be ignored."
+    "Here is code for plotting."
    ]
   },
   {
