--- a/cs109_python_tutorial.ipynb
+++ b/cs109_python_tutorial.ipynb
@@ -3201,35 +3201,35 @@
     "def kmeans(im, X, k): \n",
     "\n",
     "  sz = X.shape[0]\n",
-    "  init_cent_idx = np.random.choice(sz, k, replace=False)\n",
+    "  init_centroid_idx = np.random.choice(sz, k, replace=False)\n",
     "  # access the rows\n",
-    "  cent_X = X[init_cent_idx]\n",
+    "  centroid_X = X[init_centroid_idx]\n",
     "\n",
     "  distances = np.zeros((k, sz))\n",
-    "  # assgn contains the membership of each data point\n",
-    "  assgn = np.zeros(sz)\n",
+    "  # assignment contains the membership of each data point\n",
+    "  assignment = np.zeros(sz)\n",
     "\n",
     "  while(True):\n",
     "    for i in xrange(k):\n",
     "      # pay attention to the use of axis here\n",
-    "      distances[i, :] = np.linalg.norm(X - cent_X[i], axis=1)\n",
-    "    assgn = np.argmin(distances, axis=0)\n",
+    "      distances[i, :] = np.linalg.norm(X - centroid_X[i], axis=1)\n",
+    "    assignment = np.argmin(distances, axis=0)\n",
     "\n",
-    "    new_cent_X = np.zeros_like(cent_X)\n",
+    "    new_centroid_X = np.zeros_like(centroid_X)\n",
     "    # compute the new centroid\n",
     "    for i in xrange(k):\n",
-    "      new_cent_X[i] = np.mean(\n",
-    "        X[np.nonzero(assgn == i)],\n",
+    "      new_centroid_X[i] = np.mean(\n",
+    "        X[np.nonzero(assignment == i)],\n",
     "        axis=0\n",
     "      )\n",
     "    # the centroids converge\n",
-    "    if np.allclose(new_cent_X, cent_X):\n",
+    "    if np.allclose(new_centroid_X, centroid_X):\n",
     "      break\n",
     "\n",
-    "    cent_X = new_cent_X\n",
+    "    centroid_X = new_centroid_X\n",
     "\n",
     "  H, W, _ = im.shape\n",
-    "  return assgn.reshape((H, W))"
+    "  return assignment.reshape((H, W))"
    ]
   },
   {
