--- a/cs109_python_tutorial.ipynb
+++ b/cs109_python_tutorial.ipynb
@@ -3127,7 +3127,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.misc import imread\n",
+    "from matplotlib.pyplot import imread\n",
     "\n",
     "img = imread('data/polar_light.jpg') \n",
     "\n",
