--- a/cs109_python_tutorial.ipynb
+++ b/cs109_python_tutorial.ipynb
@@ -3152,8 +3152,8 @@
    "outputs": [],
    "source": [
     "features = np.zeros((img.shape[0] * img.shape[1], 5)) \n",
-    "for row in xrange(img.shape[0]):\n",
-    "    for col in xrange(img.shape[1]):\n",
+    "for row in range(img.shape[0]):\n",
+    "    for col in range(img.shape[1]):\n",
     "        features[row*img.shape[1] + col, :] = np.array([row, col, \n",
     "            img[row, col, 0], img[row, col, 1], img[row, col, 2]])\n",
     "features_normalized = features / features.max(axis = 0)\n",
@@ -3163,13 +3163,13 @@
     "    average_color = np.zeros((num_clusters, 3))\n",
     "    cluster_count = np.zeros(num_clusters)\n",
     "\n",
-    "    for i in xrange(im.shape[0]):\n",
-    "        for j in xrange(im.shape[1]):\n",
+    "    for i in range(im.shape[0]):\n",
+    "        for j in range(im.shape[1]):\n",
     "            c = pixel_clusters[i,j]\n",
     "            cluster_count[c] += 1\n",
     "            average_color[c, :] += im[i, j, :]\n",
     "\n",
-    "    for c in xrange(num_clusters):\n",
+    "    for c in range(num_clusters):\n",
     "        average_color[c,:] /= float(cluster_count[c])\n",
     "\n",
     "    out_im = np.zeros_like(im)\n",
