--- a/cs109_python_tutorial.ipynb
+++ b/cs109_python_tutorial.ipynb
@@ -3173,8 +3173,8 @@
     "        average_color[c,:] /= float(cluster_count[c])\n",
     "\n",
     "    out_im = np.zeros_like(im)\n",
-    "    for i in xrange(im.shape[0]):\n",
-    "        for j in xrange(im.shape[1]):\n",
+    "    for i in range(im.shape[0]):\n",
+    "        for j in range(im.shape[1]):\n",
     "            c = pixel_clusters[i,j]\n",
     "            out_im[i,j,:] = average_color[c,:]\n",
     "\n",
@@ -3210,14 +3210,14 @@
     "  assignment = np.zeros(sz)\n",
     "\n",
     "  while(True):\n",
-    "    for i in xrange(k):\n",
+    "    for i in range(k):\n",
     "      # pay attention to the use of axis here\n",
     "      distances[i, :] = np.linalg.norm(X - centroid_X[i], axis=1)\n",
     "    assignment = np.argmin(distances, axis=0)\n",
     "\n",
     "    new_centroid_X = np.zeros_like(centroid_X)\n",
     "    # compute the new centroid\n",
-    "    for i in xrange(k):\n",
+    "    for i in range(k):\n",
     "      new_centroid_X[i] = np.mean(\n",
     "        X[np.nonzero(assignment == i)],\n",
     "        axis=0\n",
